# RL_MORAI

./: README.md  __init__.py  example_config.toml  safe_config.toml  stage1_rl5_config.toml  stage1_rl8_config.toml
MORAI-DriveExample_ROS2/: .gitmodules  README.md
MORAI-SensorExample/: .gitmodules  README.md  pyproject.toml  requirements.txt  starter-linux.sh
MORAI-SensorExample/src/sensor_example/: CAMprocess.py  GPSprocess.py  IMUprocess.py  LIDARprocess.py  form_ui.py  morai_sensor_viewer.py  sensor_config.json
baselines/: __init__.py
config/: __init__.py  runtime.py
core/: __init__.py  reset_manager.py  sync_manager.py  types.py
data/: reference_path_example.csv
envs/: __init__.py  gym_wrapper.py  morai_env.py  observation.py  reward.py
io/: __init__.py  collision_udp.py  control_udp.py  multi_ego_setting_udp.py  object_udp.py  scenario_load_udp.py  vehicle_status_udp.py
log/: latest_list
maps/: __init__.py  local_bev.py  reference_path.py  route_corridor.py  selection_io.py
morai_rl/: README.md  package.xml  setup.cfg  setup.py
morai_rl/config/: stage1_rl8_ros2.toml
morai_rl/launch/: check_reset.launch.py  check_reset_drive.launch.py  check_step_loop.launch.py  train_ppo.launch.py
morai_rl/morai_rl/baselines/: simple_driver.py
morai_rl/morai_rl/config/: runtime.py
morai_rl/morai_rl/envs/: morai_env.py  reward.py  termination.py
morai_rl/morai_rl/io/: __init__.py  ros2.py
morai_rl/morai_rl/scripts/: __init__.py  check_reset.py  check_reset_drive.py  check_step_loop.py
morai_rl/resource/: morai_rl
scripts/: check_collision_udp.py  (+15 more)
(+10 files in other folders)
