[project]
name = "morai-sensorexample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "pynmea2>=1.19.0",
    "pyside2>=5.15.2.1",
    "pyvista>=0.44.2",
    "pyvistaqt>=0.11.3",
    "requests>=2.32.4",
]
